1- Removed unused imports 2- Replaced string concatenations with append calls where applicable. 3- Added break statements to reduce unnecessary looping. 4- Replaced Arrays.asList() with Collections.singletonList() for single element calls. 5- Replaced empty string validation using "".equals() with var.isEmpty(). 6- Replaced few hardcoded values with Java's builtin constants.